# Axiom-ML

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
notebooks/: LinearRegression.ipynb  MLP.ipynb
src/: models.py  preprocessing.py
src/core/: __init__.py  activation.py  layers.py  loss.py  optim.py
src/models/: LinearRegression.py  __init__.py
src/utils/: plots.py
tests/: test_layer.py  test_models.py
